[package]
name = "object_store_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
object_store = { version = "0.10.0", features = ["aws"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "s3_style_bench"
path = "src/s3.rs"
