[package]
name = "object_store_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
object_store = { version = "0.10.0", features = ["aws", "gcp"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
parquet = { version = "51", features = ["arrow", "async"] }
rand = "0.8.5"

[[bin]]
name = "s3_style_bench"
path = "src/s3.rs"

[[bin]]
name = "parquet_bench"
path = "src/parquet.rs"

[[bin]]
name = "random_access"
path = "src/random_access.rs"

[[bin]]
name = "upload"
path = "src/upload.rs"
